--- a/background.html
+++ b/background.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!--main logic script-->
   <!--don't edit them-->
-  <script src="background.js"></script>
+  <script src="./main/background.js"></script>
   <script src="key-config.js"></script>
 
   <!--keys config list-->
