--- a/background.html
+++ b/background.html
@@ -10,6 +10,9 @@
   <!--keys config list-->
   <script src="./keys/key_2_1.js"></script>
   <!--add new key file's link here-->
+  <script src="./keys/key_2_2.js"></script>
+  <script src="./keys/key_2_3.js"></script>
+  <script src="./keys/key_2_4.js"></script>
   <script src="./keys/key_2_5.js"></script>
   <script src="./keys/key_2_6.js"></script>
   <script src="./keys/key_2_7.js"></script>
