add new function:autoRun

--- a/main/options.html
+++ b/main/options.html
@@ -18,6 +18,10 @@
       <h3>模拟正确率</h3>
       <h3><input id='rate' value>%</h3>
     </li>
+    <li>
+      <h3>autoRun</h3>
+      <h3><input id='autoRun' type='checkbox'></h3>
+    </li>
   </ul>
   <button id='submit'>确认设置</button>
 </body>
