--- a/background.html
+++ b/background.html
@@ -17,5 +17,6 @@
   <script src="./keys/key_2_6.js"></script>
   <script src="./keys/key_2_7.js"></script>
   <script src="./keys/key_2_8.js"></script>
+  <script src="./keys/key_3_1.js"></script>
 </head>
 </html>
