--- a/background.html
+++ b/background.html
@@ -18,5 +18,6 @@
   <script src="./keys/key_2_7.js"></script>
   <script src="./keys/key_2_8.js"></script>
   <script src="./keys/key_3_1.js"></script>
+  <script src="./keys/key_3_2.js"></script>
 </head>
 </html>
