fix for autoRun & collocation

--- a/background.html
+++ b/background.html
@@ -19,5 +19,6 @@
   <script src="./keys/key_2_8.js"></script>
   <script src="./keys/key_3_1.js"></script>
   <script src="./keys/key_3_2.js"></script>
+  <script src="./keys/key_3_7.js"></script>
 </head>
 </html>
